# JPEG-Codec

./: CMakeLists.txt  Decoder.cpp  README.docx  README.md  Segment.cpp  main.cpp
Resources/: zigzag_swap.cpp
include/: Decoder.h  Segment.h  Utility.h
